# MaximumDefectiveBiclique

./: .gitignore  CMakeLists.txt  README.md  res_b.xlsx  res_b_br.xlsx  res_b_br_1nn.xlsx  res_b_cn.xlsx  res_b_core.xlsx  res_b_heu.xlsx  res_b_ub0.xlsx  res_b_ub1.xlsx  res_b_ub2.xlsx  res_b_ub3.xlsx  res_p.xlsx  res_p_cn.xlsx  res_p_core.xlsx  res_p_heu.xlsx  res_p_ub0.xlsx  res_p_ub1.xlsx  res_p_ub2.xlsx  res_p_ub3.xlsx
src/: CMakeLists.txt  main.cpp
src/algos/: CMakeLists.txt  maxbc.cpp  maxbc.h  mbp.cpp  mbp.h  mdb.cpp  mdb.h  mdbb.cpp  mdbb.h
src/mdb/: CMakeLists.txt  mbc.cpp  mbc.h  mdb.cpp  mdb.h  mdbb.cpp  mdbb.h  mdbp.cpp  mdbp.h  mdc.cpp  mdc.h
src/utils/: CMakeLists.txt  bigraph.hpp  coloring.hpp  fastio.hpp  graph.hpp  hash.hpp  linearheap.hpp  log.hpp  ordering.hpp  traversal.hpp  vertexset.hpp
